--- a/index.html
+++ b/index.html
@@ -55,17 +55,16 @@
           />
         </svg>
       </button>
-      <div class="menu_top_border"></div>
-    </div>
-    <div class="svg-wrap">
-      <svg viewBox="0 0 460 105" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <clipPath id="border" transform="scale(.462,.4)">
-          <path
-            d="M343 37C305 7 206 -32.6 114 49C70.8 93 20 104 0 104H460C447 104 426 104 385 76L343 37Z"
-            stroke="black"
-          />
-        </clipPath>
-      </svg>
+      <div class="menu_top_border">
+        <svg viewBox="0 0 460 105" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <clipPath id="border" transform="scale(.462,.4)">
+            <path
+              d="M343 37C305 7 206 -32.6 114 49C70.8 93 20 104 0 104H460C447 104 426 104 385 76L343 37Z"
+              stroke="black"
+            />
+          </clipPath>
+        </svg>
+      </div>
     </div>
     <script src="./assets/js/index.js"></script>
   </body>
